fix<HomePgae>: fix spacing slider of feedback

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -112,3 +112,7 @@ body {
   padding-right: 20px;
   margin: 0 auto;
 }
+
+.embla__slide {
+  margin-right: 20px;
+}
